--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+  "bugs": {
+    "url": "https://github.com/connormakh/ng-smarter-table/issues"
+  },
+  "author": {"email": "connormakhlouta@gmail.com",
+    "name": "Connor Makhlouta"
+  },
+  "homepage": "https://github.com/connormakh/ng-smarter-table",
+  "description": "A comprehensive angular smart table",
+  "keywords": ["angular", "smart-table", "filter", "sort", "pagination", "bootstrap"],
   "name": "ng-smarter-table",
-  "version": "0.0.5",
+  "repository":
+  { "type": "git"
+  , "url":  "https://github.com/connormakh/ng-smarter-table.git"
+  },
+  "version": "0.0.7",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
